[gd_scene load_steps=42 format=3 uid="uid://cttr3u0ace8fx"]

[ext_resource type="Script" uid="uid://c72vulqtocj4f" path="res://Scenes/player.gd" id="1_bo1nx"]
[ext_resource type="Texture2D" uid="uid://1o12wvnfube" path="res://sprites/environment/bg-sky-16x9.png" id="1_kry3j"]
[ext_resource type="Texture2D" uid="uid://dphgkbr6fahkc" path="res://sprites/environment/bg-sky-only-16x9.png" id="2_21xkr"]
[ext_resource type="Texture2D" uid="uid://cylt5hmxckrgj" path="res://sprites/environment/bg-clouds-a.png" id="3_6bp64"]
[ext_resource type="Texture2D" uid="uid://dseiylogpbv72" path="res://sprites/environment/test-platform.png" id="3_8gbba"]
[ext_resource type="Texture2D" uid="uid://doqob8tyr0hlw" path="res://sprites/environment/bg-mountains.png" id="4_344ge"]
[ext_resource type="Script" uid="uid://bgivpr1sl1kgi" path="res://Scenes/GoalZone.gd" id="4_jjvhh"]
[ext_resource type="Texture2D" uid="uid://cb2g14cjerj7n" path="res://sprites/player/sprite-ninja-attack-01.png" id="6_e08e2"]
[ext_resource type="Texture2D" uid="uid://dmsygsiuistt1" path="res://sprites/player/sprite-ninja-idle-01.png" id="7_k12tt"]
[ext_resource type="Texture2D" uid="uid://b743ndjfngf2g" path="res://sprites/player/sprite-ninja-attack-02.png" id="7_neg2b"]
[ext_resource type="Texture2D" uid="uid://j236l14b5aol" path="res://sprites/player/sprite-ninja-idle-02.png" id="8_h1bgf"]
[ext_resource type="Texture2D" uid="uid://bonausws2grrb" path="res://sprites/player/sprite-ninja-attack-03.png" id="8_r33sp"]
[ext_resource type="Texture2D" uid="uid://xif8qyecexry" path="res://sprites/player/sprite-ninja-idle-03.png" id="9_b3802"]
[ext_resource type="Texture2D" uid="uid://y82xt5j45ahg" path="res://sprites/player/sprite-ninja-attack-04.png" id="9_hdf80"]
[ext_resource type="Texture2D" uid="uid://doymhqwuty5v2" path="res://sprites/player/sprite-ninja-idle-04.png" id="10_fevyy"]
[ext_resource type="Texture2D" uid="uid://c5txkdf7nr0qj" path="res://sprites/player/sprite-ninja-attack-05.png" id="10_jwpg7"]
[ext_resource type="Texture2D" uid="uid://f6h78o5qgmcx" path="res://sprites/player/sprite-ninja-idle-05.png" id="11_hibaj"]
[ext_resource type="Texture2D" uid="uid://di3jfvhqrn6mp" path="res://sprites/player/sprite-ninja-idle-06.png" id="12_pdsj5"]
[ext_resource type="Texture2D" uid="uid://b3p61462a0l0d" path="res://sprites/player/sprite-ninja-idle-07.png" id="13_ee4r6"]
[ext_resource type="Texture2D" uid="uid://csnibefmubnd8" path="res://sprites/player/sprite-ninja-idle-08.png" id="14_gt3je"]
[ext_resource type="Texture2D" uid="uid://0ob2jsyax1gn" path="res://sprites/player/sprite-ninja-jump-01.png" id="15_1w6v2"]
[ext_resource type="Texture2D" uid="uid://bddddcvqbxakw" path="res://sprites/player/sprite-ninja-jump-02.png" id="16_ueoa1"]
[ext_resource type="Texture2D" uid="uid://ylmpsbe47te1" path="res://sprites/player/sprite-ninja-jump-03.png" id="17_6vcvc"]
[ext_resource type="Texture2D" uid="uid://dqpeoiavtu6pi" path="res://sprites/player/sprite-ninja-run-01.png" id="18_7k868"]
[ext_resource type="Texture2D" uid="uid://c5vweequp4fn3" path="res://sprites/player/sprite-ninja-run-02.png" id="19_hpc6h"]
[ext_resource type="Texture2D" uid="uid://byftm7j8k3mc" path="res://sprites/player/sprite-ninja-run-03.png" id="20_kltya"]
[ext_resource type="Texture2D" uid="uid://btjpe2rl5bh1v" path="res://sprites/player/sprite-ninja-run-04.png" id="21_e08e2"]
[ext_resource type="Texture2D" uid="uid://42voumm2mxxf" path="res://sprites/player/sprite-ninja-run-05.png" id="22_neg2b"]
[ext_resource type="Texture2D" uid="uid://b3wmifvph84y1" path="res://sprites/player/sprite-ninja-run-06.png" id="23_r33sp"]
[ext_resource type="Texture2D" uid="uid://csjvx16eguqs7" path="res://sprites/player/sprite-ninja-run-07.png" id="24_hdf80"]
[ext_resource type="Texture2D" uid="uid://c8fhh1mb2mgoh" path="res://sprites/effects/sprite-dustpuff-tiny.png" id="25_1w6v2"]
[ext_resource type="Texture2D" uid="uid://v4xwfuj67p22" path="res://sprites/player/sprite-ninja-run-08.png" id="25_jwpg7"]
[ext_resource type="PackedScene" uid="uid://eifo6q5ajiy8" path="res://Scenes/Dummy.tscn" id="31_k2e45"]
[ext_resource type="Script" uid="uid://c743e0m6ud2xv" path="res://Scenes/sword_hitbox.gd" id="31_neg2b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jjvhh"]
radius = 22.0907

[sub_resource type="SpriteFrames" id="SpriteFrames_3pmx8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e08e2")
}, {
"duration": 1.0,
"texture": ExtResource("7_neg2b")
}, {
"duration": 1.0,
"texture": ExtResource("8_r33sp")
}, {
"duration": 1.0,
"texture": ExtResource("9_hdf80")
}, {
"duration": 1.0,
"texture": ExtResource("10_jwpg7")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_k12tt")
}, {
"duration": 1.0,
"texture": ExtResource("8_h1bgf")
}, {
"duration": 1.0,
"texture": ExtResource("9_b3802")
}, {
"duration": 1.0,
"texture": ExtResource("10_fevyy")
}, {
"duration": 1.0,
"texture": ExtResource("11_hibaj")
}, {
"duration": 1.0,
"texture": ExtResource("12_pdsj5")
}, {
"duration": 1.0,
"texture": ExtResource("13_ee4r6")
}, {
"duration": 1.0,
"texture": ExtResource("14_gt3je")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_1w6v2")
}, {
"duration": 3.0,
"texture": ExtResource("16_ueoa1")
}, {
"duration": 1.0,
"texture": ExtResource("17_6vcvc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_7k868")
}, {
"duration": 1.0,
"texture": ExtResource("19_hpc6h")
}, {
"duration": 1.0,
"texture": ExtResource("20_kltya")
}, {
"duration": 1.0,
"texture": ExtResource("21_e08e2")
}, {
"duration": 1.0,
"texture": ExtResource("22_neg2b")
}, {
"duration": 1.0,
"texture": ExtResource("23_r33sp")
}, {
"duration": 1.0,
"texture": ExtResource("24_hdf80")
}, {
"duration": 1.0,
"texture": ExtResource("25_jwpg7")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_536cc"]
radius = 24.0208

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjvhh"]
size = Vector2(243, 23.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gbba"]
size = Vector2(158.5, 23.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kry3j"]
size = Vector2(238, 23.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21xkr"]
size = Vector2(67, 46)

[node name="Main" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(162, -180)
texture = ExtResource("1_kry3j")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(571, 339)
motion_scale = Vector2(0.05, 0.05)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
texture = ExtResource("2_21xkr")

[node name="CloudsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CloudsLayer"]
position = Vector2(17, 242)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6bp64")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/CloudsLayer"]
position = Vector2(414, 176)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6bp64")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/CloudsLayer"]
position = Vector2(783, 321)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6bp64")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/CloudsLayer"]
position = Vector2(1139, 176)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6bp64")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/CloudsLayer"]
position = Vector2(1643, 235)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6bp64")

[node name="MountainsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(571, 339)
motion_scale = Vector2(0.5, 0.5)

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/MountainsLayer"]
position = Vector2(623, 235)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_344ge")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/MountainsLayer"]
position = Vector2(-214, 152)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_344ge")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(48, 410)
script = ExtResource("1_bo1nx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
rotation = 0.0110045
shape = SubResource("CircleShape2D_jjvhh")

[node name="PlayerCamera" type="Camera2D" parent="Player"]
zoom = Vector2(1.1, 1.1)
limit_left = 0
limit_top = -100
limit_right = 2000
limit_bottom = 550
limit_smoothed = true
position_smoothing_enabled = true

[node name="PlayerAnimatedSprite" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_3pmx8")
animation = &"attack"
frame = 3
frame_progress = 0.902326

[node name="SpeedLabel" type="Label" parent="Player"]
visible = false
offset_left = -12.0
offset_top = -49.0
offset_right = 28.0
offset_bottom = -26.0
scale = Vector2(0.8, 0.8)
horizontal_alignment = 1

[node name="JumpDust" type="CPUParticles2D" parent="Player"]
position = Vector2(0, 30)
emitting = false
amount = 20
texture = ExtResource("25_1w6v2")
lifetime = 0.6
one_shot = true
explosiveness = 0.65
lifetime_randomness = 0.1
direction = Vector2(0, -1)
spread = 40.0
gravity = Vector2(0, 200)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
scale_amount_min = 0.3

[node name="SwordHitbox" type="Area2D" parent="Player"]
position = Vector2(-8, 0)
monitoring = false
script = ExtResource("31_neg2b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/SwordHitbox"]
position = Vector2(16, 0)
shape = SubResource("CircleShape2D_536cc")

[node name="Node2D" parent="." instance=ExtResource("31_k2e45")]
position = Vector2(423, 200)

[node name="Node2D2" parent="." instance=ExtResource("31_k2e45")]
position = Vector2(481, 356)

[node name="Platform-A" type="StaticBody2D" parent="."]
position = Vector2(143, 458)

[node name="CollisionShape-A" type="CollisionShape2D" parent="Platform-A"]
position = Vector2(-25, 0)
shape = SubResource("RectangleShape2D_jjvhh")

[node name="Sprite2D" type="Sprite2D" parent="Platform-A/CollisionShape-A"]
position = Vector2(-41.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Sprite2D2" type="Sprite2D" parent="Platform-A/CollisionShape-A"]
position = Vector2(44.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-A2" type="StaticBody2D" parent="."]
position = Vector2(-11, 387)
rotation = 1.55509

[node name="CollisionShape-A" type="CollisionShape2D" parent="Platform-A2"]
position = Vector2(-39.5, 0)
shape = SubResource("RectangleShape2D_jjvhh")

[node name="Sprite2D" type="Sprite2D" parent="Platform-A2/CollisionShape-A"]
position = Vector2(-41.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Sprite2D2" type="Sprite2D" parent="Platform-A2/CollisionShape-A"]
position = Vector2(44.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-B" type="StaticBody2D" parent="."]
position = Vector2(274, 370)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-B"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-B/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-C" type="StaticBody2D" parent="."]
position = Vector2(461, 458)

[node name="CollisionShape-A" type="CollisionShape2D" parent="Platform-C"]
position = Vector2(-39, 0)
shape = SubResource("RectangleShape2D_kry3j")

[node name="Sprite2D" type="Sprite2D" parent="Platform-C/CollisionShape-A"]
position = Vector2(-41.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Sprite2D2" type="Sprite2D" parent="Platform-C/CollisionShape-A"]
position = Vector2(44.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-D" type="StaticBody2D" parent="."]
position = Vector2(437, 301)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-D"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-D/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-E" type="StaticBody2D" parent="."]
position = Vector2(755, 378)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-E"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-E/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-F" type="StaticBody2D" parent="."]
position = Vector2(979, 458)

[node name="CollisionShape-A" type="CollisionShape2D" parent="Platform-F"]
position = Vector2(-67, 0)
shape = SubResource("RectangleShape2D_kry3j")

[node name="Sprite2D" type="Sprite2D" parent="Platform-F/CollisionShape-A"]
position = Vector2(-41.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Sprite2D2" type="Sprite2D" parent="Platform-F/CollisionShape-A"]
position = Vector2(44.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-B2" type="StaticBody2D" parent="."]
position = Vector2(1067, 330)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-B2"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-B2/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-C2" type="StaticBody2D" parent="."]
position = Vector2(1258, 455)

[node name="CollisionShape-A" type="CollisionShape2D" parent="Platform-C2"]
position = Vector2(-39.5, 0)
shape = SubResource("RectangleShape2D_kry3j")

[node name="Sprite2D" type="Sprite2D" parent="Platform-C2/CollisionShape-A"]
position = Vector2(-41.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Sprite2D2" type="Sprite2D" parent="Platform-C2/CollisionShape-A"]
position = Vector2(44.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-D2" type="StaticBody2D" parent="."]
position = Vector2(1270, 226)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-D2"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-D2/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-E2" type="StaticBody2D" parent="."]
position = Vector2(1533, 138)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-E2"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-E2/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-F2" type="StaticBody2D" parent="."]
position = Vector2(1722, 402)

[node name="CollisionShape-A" type="CollisionShape2D" parent="Platform-F2"]
position = Vector2(-39.5, 0)
shape = SubResource("RectangleShape2D_kry3j")

[node name="Sprite2D" type="Sprite2D" parent="Platform-F2/CollisionShape-A"]
position = Vector2(-41.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Sprite2D2" type="Sprite2D" parent="Platform-F2/CollisionShape-A"]
position = Vector2(44.5, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="Platform-Z" type="StaticBody2D" parent="."]
position = Vector2(1881, 320)

[node name="CollisionShape-B" type="CollisionShape2D" parent="Platform-Z"]
position = Vector2(-12.25, 0)
shape = SubResource("RectangleShape2D_8gbba")

[node name="Sprite2D" type="Sprite2D" parent="Platform-Z/CollisionShape-B"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_8gbba")

[node name="GoalZone" type="Area2D" parent="Platform-Z"]
position = Vector2(4, -21)
script = ExtResource("4_jjvhh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform-Z/GoalZone"]
position = Vector2(-23.5, -13)
shape = SubResource("RectangleShape2D_21xkr")

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="JumpCounterLabel" type="Label" parent="UI"]
offset_left = 11.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 33.0
pivot_offset = Vector2(10, 10)
text = "Jumps: 2"

[connection signal="area_entered" from="Player/SwordHitbox" to="Player/SwordHitbox" method="_on_area_entered"]
[connection signal="body_entered" from="Platform-Z/GoalZone" to="Platform-Z/GoalZone" method="_on_body_entered"]
